Convert CSIT tests to use HTTP rather than HTTPS
This commit converts the CSITs from HTTPS to HTTP. It also does some
refactoring and tidying up on the CSIT environment.

Issue-ID: POLICY-4338
Change-Id: I02afa5c7a585470fa0bda521e97bf1cdcf6a95c2
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/csit/config/drools-apps/env/base.conf
+++ b/csit/config/drools-apps/env/base.conf
@@ -59,7 +59,7 @@ AAF_HOST=aaf.api.simpledemo.onap.org
 
 # HTTP Servers
 
-HTTP_SERVER_HTTPS=true
+HTTP_SERVER_HTTPS=false
 PROMETHEUS=true
 
 # PDP-D DMaaP configuration channel
@@ -94,6 +94,7 @@ PDP_PASSWORD=zb!XztG34
 PDP_CLIENT_USERNAME=python
 PDP_CLIENT_PASSWORD=test
 PDP_ENVIRONMENT=TEST
+PDP_HTTPS=false
 
 # DCAE DMaaP
 
@@ -104,7 +105,7 @@ DCAE_CONSUMER_GROUP=dcae.policy.shared
 # Open DMaaP
 
 DMAAP_SERVERS=message-router
-DMAAP_HTTPS=true
+DMAAP_HTTPS=false
 
 # AAI
 
@@ -113,13 +114,14 @@ AAI_PORT=6666
 AAI_CONTEXT_URI=
 AAI_USERNAME=policy@policy.onap.org
 AAI_PASSWORD=demo123456!
+AAI_HTTPS=false
 
 # MSO
 
 SO_HOST=so-sim
 SO_PORT=6669
 SO_CONTEXT_URI=
-SO_URL=https://message-router:6669/
+SO_URL=http://message-router:6669/
 SO_USERNAME=InfraPortalClient
 SO_PASSWORD=password1$
 
