--- a/csit/config/drools/env/base.conf
+++ b/csit/config/drools/env/base.conf
@@ -59,7 +59,7 @@ AAF_HOST=aaf.api.simpledemo.onap.org
 
 # HTTP Servers
 
-HTTP_SERVER_HTTPS=true
+HTTP_SERVER_HTTPS=false
 PROMETHEUS=true
 
 # PDP-D DMaaP configuration channel
@@ -93,6 +93,7 @@ PDP_PASSWORD=
 PDP_CLIENT_USERNAME=
 PDP_CLIENT_PASSWORD=
 PDP_ENVIRONMENT=
+PDP_HTTPS=false
 GUARD_DISABLED=false
 
 # DCAE DMaaP
@@ -104,7 +105,7 @@ DCAE_CONSUMER_GROUP=dcae.policy.shared
 # Open DMaaP
 
 DMAAP_SERVERS=mr.api.simpledemo.onap.org
-DMAAP_HTTPS=true
+DMAAP_HTTPS=false
 
 # AAI
 
@@ -113,6 +114,7 @@ AAI_PORT=8443
 AAI_CONTEXT_URI=
 AAI_USERNAME=policy@policy.onap.org
 AAI_PASSWORD=demo123456!
+AAI_HTTPS=false
 
 # MSO
 
