Convert CSIT tests to use HTTP rather than HTTPS
This commit converts the CSITs from HTTPS to HTTP. It also does some
refactoring and tidying up on the CSIT environment.

Issue-ID: POLICY-4338
Change-Id: I6f2a3ea672b757f27e47b09183fd4c3f33709135
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/csit/config/distribution/defaultConfig.json
+++ b/csit/config/distribution/defaultConfig.json
@@ -5,7 +5,7 @@
         "port":6969,
         "userName":"healthcheck",
         "password":"zb!XztG34",
-        "https": true
+        "https": false
     },
     "receptionHandlerParameters":{
         "FileReceptionHandler":{
@@ -64,7 +64,7 @@
                     "userName": "healthcheck",
                     "password": "zb!XztG34"
                 },
-                "isHttps": true,
+                "isHttps": false,
                 "deployPolicies": true
             }
         }
