--- a/csit/config/drools-apps/env/base.conf
+++ b/csit/config/drools-apps/env/base.conf
@@ -1,5 +1,6 @@
 # ============LICENSE_START==================================================
 # Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ===========================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -55,6 +56,10 @@ AAF=false
 AAF_NAMESPACE=org.onap.policy
 AAF_HOST=aaf.api.simpledemo.onap.org
 
+# HTTP Servers
+
+HTTP_SERVER_HTTPS=false
+
 # PDP-D DMaaP configuration channel
 
 PDPD_CONFIGURATION_TOPIC=PDPD-CONFIGURATION
@@ -87,6 +92,7 @@ PDP_PASSWORD=zb!XztG34
 PDP_CLIENT_USERNAME=python
 PDP_CLIENT_PASSWORD=test
 PDP_ENVIRONMENT=TEST
+PDP_HTTPS=false
 
 # DCAE DMaaP
 
@@ -97,6 +103,7 @@ DCAE_CONSUMER_GROUP=dcae.policy.shared
 # Open DMaaP
 
 DMAAP_SERVERS=simulator
+DMAAP_HTTPS=false
 
 # AAI
 
@@ -105,13 +112,14 @@ AAI_PORT=6666
 AAI_CONTEXT_URI=
 AAI_USERNAME=policy@policy.onap.org
 AAI_PASSWORD=demo123456!
+AAI_HTTPS=false
 
 # MSO
 
 SO_HOST=simulator
 SO_PORT=6669
 SO_CONTEXT_URI=
-SO_URL=https://simulator:6669/
+SO_URL=http://simulator:6669/
 SO_USERNAME=InfraPortalClient
 SO_PASSWORD=password1$
 
