--- a/csit/config/drools/env/base.conf
+++ b/csit/config/drools/env/base.conf
@@ -1,5 +1,7 @@
 # ============LICENSE_START=======================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2021 Bell Canada. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -48,12 +50,18 @@ REPOSITORY_OFFLINE=false
 SQL_HOST=mariadb
 SQL_USER=policy_user
 SQL_PASSWORD=policy_user
+SQL_PORT=3306
 
 # AAF
 
 AAF=false
 AAF_NAMESPACE=org.onap.policy
 AAF_HOST=aaf.api.simpledemo.onap.org
+
+# HTTP Servers
+
+HTTP_SERVER_HTTPS=false
+PROMETHEUS=true
 
 # PDP-D DMaaP configuration channel
 
@@ -86,6 +94,7 @@ PDP_PASSWORD=
 PDP_CLIENT_USERNAME=
 PDP_CLIENT_PASSWORD=
 PDP_ENVIRONMENT=
+PDP_HTTPS=false
 GUARD_DISABLED=false
 
 # DCAE DMaaP
@@ -97,6 +106,7 @@ DCAE_CONSUMER_GROUP=dcae.policy.shared
 # Open DMaaP
 
 DMAAP_SERVERS=mr.api.simpledemo.onap.org
+DMAAP_HTTPS=false
 
 # AAI
 
@@ -105,6 +115,7 @@ AAI_PORT=8443
 AAI_CONTEXT_URI=
 AAI_USERNAME=policy@policy.onap.org
 AAI_PASSWORD=demo123456!
+AAI_HTTPS=false
 
 # MSO
 
