--- a/csit/config/apex-pdp/OnapPfConfig.json
+++ b/csit/config/apex-pdp/OnapPfConfig.json
@@ -5,7 +5,7 @@
         "port": 6969,
         "userName": "healthcheck",
         "password": "zb!XztG34",
-        "https": true
+        "https": false
     },
     "pdpStatusParameters":{
         "pdpGroup": "defaultGroup",
@@ -28,14 +28,14 @@
             "topic" : "POLICY-PDP-PAP",
             "servers" : [ "simulator" ],
             "topicCommInfrastructure" : "dmaap",
-            "useHttps" : true,
+            "useHttps" : false,
             "allowSelfSignedCerts" : true
         }],
         "topicSinks" : [{
             "topic" : "POLICY-PDP-PAP",
             "servers" : [ "simulator" ],
             "topicCommInfrastructure" : "dmaap",
-            "useHttps" : true,
+            "useHttps" : false,
             "allowSelfSignedCerts" : true
         }]
     }
