--- a/csit/config/xacml-pdp/defaultConfig.json
+++ b/csit/config/xacml-pdp/defaultConfig.json
@@ -7,7 +7,7 @@
         "port": 6969,
         "userName": "healthcheck",
         "password": "zb!XztG34",
-        "https": true,
+        "https": false,
         "aaf": false
     },
     "policyApiParameters": {
@@ -15,7 +15,7 @@
         "port": 6969,
         "userName": "healthcheck",
         "password": "zb!XztG34",
-        "https": true,
+        "https": false,
         "aaf": false
     },
     "applicationPath": "/opt/app/policy/pdpx/apps",
@@ -24,14 +24,14 @@
             "topic" : "POLICY-PDP-PAP",
             "servers" : [ "simulator" ],
             "topicCommInfrastructure" : "dmaap",
-            "useHttps" : true,
+            "useHttps" : false,
             "allowSelfSignedCerts" : true
         }],
         "topicSinks" : [{
             "topic" : "POLICY-PDP-PAP",
             "servers" : [ "simulator" ],
             "topicCommInfrastructure" : "dmaap",
-            "useHttps" : true,
+            "useHttps" : false,
             "allowSelfSignedCerts" : true
         }]
     }
