--- a/csit/docker-compose-all.yml
+++ b/csit/docker-compose-all.yml
@@ -2,6 +2,7 @@
 # ===========LICENSE_START====================================================
 #  Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 #  Modifications Copyright (C) 2021 Bell Canada. All rights reserved.
+#  Modifications Copyright (C) 2022 Nordix Foundation.
 # ============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,7 +20,7 @@
 version: '2'
 services:
    mariadb:
-      image: nexus3.onap.org:10001/mariadb:${POLICY_MARIADB_VER}
+      image: ${CONTAINER_LOCATION}mariadb:${POLICY_MARIADB_VER}
       container_name: mariadb
       hostname: mariadb
       command: ['--lower-case-table-names=1', '--wait_timeout=28800']
@@ -29,21 +30,19 @@ services:
       expose:
        - 3306
    simulator:
-      image: nexus3.onap.org:10001/onap/policy-models-simulator:${POLICY_MODELS_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-models-simulator:${POLICY_MODELS_VERSION}
       container_name: simulator
       hostname: simulator
       volumes:
        - ./config/sim-all:/opt/app/policy/simulators/etc/mounted:ro
-       - ./config/ks.jks:/opt/app/policy/simulators/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/simulators/etc/ssl/policy-truststore:ro
       expose:
        - 6666
        - 6668
        - 6669
        - 6670
-       - 3905
+       - 3904
    api:
-      image: nexus3.onap.org:10001/onap/policy-api:${POLICY_API_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-api:${POLICY_API_VERSION}
       container_name: policy-api
       depends_on:
        - mariadb
@@ -51,16 +50,16 @@ services:
       expose:
        - 6969
       volumes:
+       - ./config/api/defaultConfig.json:/opt/app/policy/api/etc/defaultConfig.json:ro
+       - ./config/api/logback.xml:/opt/app/policy/api/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/api/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/api/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/api/etc/ssl/policy-truststore:ro
       entrypoint: ./wait_for_port.sh
       command: [
         '-c', './policy-api.sh',
         'mariadb', '3306'
         ]
    pap:
-      image: nexus3.onap.org:10001/onap/policy-pap:${POLICY_PAP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-pap:${POLICY_PAP_VERSION}
       container_name: policy-pap
       depends_on:
        - mariadb
@@ -72,17 +71,15 @@ services:
       volumes:
        - ./config/pap/defaultConfig.json:/opt/app/policy/pap/etc/defaultConfig.json:ro
        - ./wait_for_port.sh:/opt/app/policy/pap/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/pap/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/pap/etc/ssl/policy-truststore:ro
       entrypoint: ./wait_for_port.sh
       command: [
         '-c', './policy-pap.sh',
         'mariadb', '3306',
-        'simulator', '3905',
+        'simulator', '3904',
         'api', '6969'
         ]
    xacml-pdp:
-      image: nexus3.onap.org:10001/onap/policy-xacml-pdp:${POLICY_XACML_PDP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-xacml-pdp:${POLICY_XACML_PDP_VERSION}
       container_name: policy-xacml-pdp
       depends_on:
        - mariadb
@@ -94,17 +91,15 @@ services:
       volumes:
        - ./config/xacml-pdp/defaultConfig.json:/opt/app/policy/pdpx/etc/defaultConfig.json:ro
        - ./wait_for_port.sh:/opt/app/policy/pdpx/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/pdpx/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/pdpx/etc/ssl/policy-truststore:ro
       entrypoint: ./wait_for_port.sh
       command: [
         '-c', './policy-pdpx.sh',
         'mariadb', '3306',
-        'simulator', '3905',
+        'simulator', '3904',
         'pap', '6969'
         ]
    drools:
-      image: nexus3.onap.org:10001/onap/policy-drools:${POLICY_DROOLS_PDP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-drools:${POLICY_DROOLS_PDP_VERSION}
       container_name: drools
       depends_on:
        - mariadb
@@ -123,10 +118,10 @@ services:
       command: [
         '-c', '/opt/app/policy/bin/pdpd-entrypoint.sh boot',
         'mariadb', '3306',
-        'simulator', '3905'
+        'simulator', '3904'
         ]
    drools-apps:
-      image: nexus3.onap.org:10001/onap/policy-pdpd-cl:${POLICY_DROOLS_APPS_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-pdpd-cl:${POLICY_DROOLS_APPS_VERSION}
       container_name: drools-apps
       depends_on:
        - mariadb
@@ -148,7 +143,7 @@ services:
       command: [
         '-c', '/opt/app/policy/bin/pdpd-cl-entrypoint.sh boot',
         'mariadb', '3306',
-        'simulator', '3905',
+        'simulator', '3904',
         'pap', '6969',
         'simulator', '6666',
         'simulator', '6668',
@@ -156,7 +151,7 @@ services:
         'simulator', '6670'
         ]
    apex-pdp:
-      image: nexus3.onap.org:10001/onap/policy-apex-pdp:${POLICY_APEX_PDP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-apex-pdp:${POLICY_APEX_PDP_VERSION}
       container_name: policy-apex-pdp
       depends_on:
        - mariadb
@@ -168,18 +163,16 @@ services:
        - 23324
       volumes:
        - ./config/apex-pdp/OnapPfConfig.json:/opt/app/policy/apex-pdp/etc/onappf/config/OnapPfConfig.json:ro
-       - ./config/ks.jks:/opt/app/policy/apex-pdp/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/apex-pdp/etc/ssl/policy-truststore:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/apex-pdp/bin/apexOnapPf.sh -c /opt/app/policy/apex-pdp/etc/onappf/config/OnapPfConfig.json',
         'mariadb', '3306',
-        'simulator', '3905',
+        'simulator', '3904',
         'pap', '6969'
         ]
    distribution:
-      image: nexus3.onap.org:10001/onap/policy-distribution:${POLICY_DISTRIBUTION_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-distribution:${POLICY_DISTRIBUTION_VERSION}
       container_name: policy-distribution
       depends_on:
        - mariadb
@@ -189,15 +182,13 @@ services:
       hostname: policy-distribution
       volumes:
        - ./config/distribution/defaultConfig.json:/opt/app/policy/distribution/etc/defaultConfig.json:ro
-       - ./config/ks.jks:/opt/app/policy/distribution/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/distribution/etc/ssl/policy-truststore:ro
        - ./distribution/config/temp/:/opt/app/policy/distribution/etc/temp/:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './policy-dist.sh',
         'mariadb', '3306',
-        'simulator', '3905',
+        'simulator', '3904',
         'pap', '6969',
         'apex-pdp', '6969'
         ]
