--- a/policy-jre/alpine/pom.xml
+++ b/policy-jre/alpine/pom.xml
@@ -35,38 +35,119 @@
     <name>Policy alpine jre docker image</name>
     <description>Policy alpine jre docker image</description>
 
+    <properties>
+        <docker.jre.imagename>onap/policy-jre-alpine</docker.jre.imagename>
+        <integration.java.name>onap/integration-java11</integration.java.name>
+        <integration.java.version>8.0.0</integration.java.version>
+    </properties>
+
+    <profiles>
+        <profile>
+            <!-- This profile is activated on Apple M1 architecture to generate the ONAP base images locally -->
+            <id>baseImage</id>
+            <activation>
+                <os>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-scm-plugin</artifactId>
+                        <version>1.13.0</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.codehaus.plexus</groupId>
+                                <artifactId>plexus-utils</artifactId>
+                                <version>3.4.2</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.apache.maven.scm</groupId>
+                                <artifactId>maven-scm-provider-gitexe</artifactId>
+                                <version>1.13.0</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <connectionType>connection</connectionType>
+                            <checkoutDirectory>src/main/resources/meta</checkoutDirectory>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>checkout-onap-python</id>
+                                <phase>validate</phase>
+                                <configuration>
+                                    <connectionUrl>scm:git:https://gerrit.onap.org/r/integration/docker/onap-java11</connectionUrl>
+                                    <checkoutDirectory>${project.build.directory}/onap-java11</checkoutDirectory>
+                                </configuration>
+                                <goals>
+                                    <goal>checkout</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>io.fabric8</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+
+                        <executions>
+                            <execution>
+                                <id>generate-base-image</id>
+                                <phase>initialize</phase>
+                                <configuration>
+                                    <verbose>true</verbose>
+                                    <apiVersion>1.23</apiVersion>
+                                    <pullRegistry>${docker.pull.registry}</pullRegistry>
+                                    <pushRegistry>${docker.push.registry}</pushRegistry>
+                                    <images>
+                                        <image>
+                                            <name>${integration.java.name}</name>
+                                            <build>
+                                                <cleanup>try</cleanup>
+                                                <contextDir>${project.build.directory}/onap-java11</contextDir>
+                                                <dockerFile>BareAlpine.Dockerfile</dockerFile>
+                                                <tags>
+                                                    <tag>${integration.java.version}</tag>
+                                                    <tag>${integration.java.version}-${maven.build.timestamp}</tag>
+                                                    <tag>${project.docker.latest.minmax.tag.version}</tag>
+                                                </tags>
+                                            </build>
+                                        </image>
+                                    </images>
+                                </configuration>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.groovy.maven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
-                <version>1.0</version>
+                <groupId>org.codehaus.gmaven</groupId>
+                <artifactId>groovy-maven-plugin</artifactId>
+                <version>2.1.1</version>
                 <executions>
                     <execution>
-                        <phase>validate</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>execute</goal>
                         </goals>
                         <configuration>
-                            <source>
-                                println 'Project version: ' + project.properties['dist.project.version'];
-                                def versionArray;
-                                if ( project.properties['dist.project.version'] != null ) {
-                                    versionArray = project.properties['dist.project.version'].split('-');
-                                }
-
-                                if ( project.properties['dist.project.version'].endsWith("-SNAPSHOT") ) {
-                                    project.properties['project.docker.latesttag.version']=versionArray[0] + "-SNAPSHOT-latest";
-                                } else {
-                                    project.properties['project.docker.latesttag.version']=versionArray[0] + "-STAGING-latest";
-                                }
-
-                                println 'New tag for docker: ' + project.properties['project.docker.latesttag.version'];
-                            </source>
+                            <source>https://github.com/onap/policy-docker/raw/master/utils/groovy/docker-tag.groovy</source>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.github.git-commit-id</groupId>
+                <artifactId>git-commit-id-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>io.fabric8</groupId>
@@ -79,15 +160,19 @@
                     <pushRegistry>${docker.push.registry}</pushRegistry>
                     <images>
                         <image>
-                            <name>onap/policy-jre-alpine</name>
+                            <name>${docker.jre.imagename}</name>
                             <build>
                                 <cleanup>try</cleanup>
                                 <dockerFile>Dockerfile</dockerFile>
                                 <tags>
                                     <tag>${project.version}</tag>
                                     <tag>${project.version}-${maven.build.timestamp}</tag>
-                                    <tag>${project.docker.latesttag.version}</tag>
+                                    <tag>${project.docker.latest.minmax.tag.version}</tag>
                                 </tags>
+                                <args>
+                                    <INTEGRATION_JAVA_NAME>${integration.java.name}</INTEGRATION_JAVA_NAME>
+                                    <INTEGRATION_JAVA_VERSION>${integration.java.version}</INTEGRATION_JAVA_VERSION>
+                                </args>
                             </build>
                         </image>
                     </images>
@@ -95,8 +180,8 @@
 
                 <executions>
                     <execution>
-                        <id>clean-images</id>
-                        <phase>pre-clean</phase>
+                        <id>clean-jre-image</id>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>remove</goal>
                         </goals>
@@ -106,22 +191,22 @@
                     </execution>
 
                     <execution>
-                        <id>generate-images</id>
-                        <phase>generate-sources</phase>
+                        <id>generate-jre-image</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>build</goal>
                         </goals>
                     </execution>
 
                     <execution>
-                        <id>push-images</id>
+                        <id>push-jre-image</id>
                         <phase>deploy</phase>
                         <goals>
                             <goal>build</goal>
                             <goal>push</goal>
                         </goals>
                         <configuration>
-                            <image>onap/policy-jre-alpine</image>
+                            <image>${docker.jre.imagename}</image>
                         </configuration>
                     </execution>
                 </executions>
@@ -143,3 +228,4 @@
         </plugins>
     </build>
 </project>
+
