Track configurable parameters in CSITs
Issue-ID: POLICY-3464
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: I5cc0445eb811bb584bc29342157874eec04b9777

--- a/csit/config/drools-pdp/env/base.conf
+++ b/csit/config/drools-pdp/env/base.conf
@@ -50,6 +50,10 @@ SQL_HOST=mariadb
 SQL_USER=policy_user
 SQL_PASSWORD=policy_user
 SQL_PORT=3306
+JDBC_URL=jdbc:mariadb://mariadb:3306/
+JDBC_OPTS=
+MYSQL_CMD=
+
 
 # AAF
 
