Fix CSIT failure in CLAMP, API and PAP tests
ACM servlet context path is updated to the CLAMP config file.

Updated prometheus endpoint in API and PAP to use /prometheus from /metrics.

Issue-ID: POLICY-4394
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: Id4fafd016beb8614ce99e0c1a5985dec52d69270

--- a/csit/metrics/prometheus.yml
+++ b/csit/metrics/prometheus.yml
@@ -86,7 +86,7 @@ scrape_configs:
       password: "zb!XztG34"
 
   - job_name: "acm-metrics"
-    metrics_path: "/prometheus"
+    metrics_path: "/onap/policy/clamp/acm/prometheus"
     static_configs:
       - targets:
           - "policy-clamp-runtime-acm:6969"
