Fix CSIT failure in CLAMP, API and PAP tests
ACM servlet context path is updated to the CLAMP config file.

Fixed prometheus endpoints in API and PAP.

Issue-ID: POLICY-4394
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: Id4fafd016beb8614ce99e0c1a5985dec52d69270

--- a/csit/config/api/apiParameters.yaml
+++ b/csit/config/api/apiParameters.yaml
@@ -80,4 +80,6 @@ management:
       base-path: /
       exposure:
         include: health,metrics,prometheus
+      path-mapping.metrics: plain-metrics
       path-mapping.prometheus: metrics
+
