--- a/csit/config/api/apiParameters.yaml
+++ b/csit/config/api/apiParameters.yaml
@@ -80,4 +80,5 @@ management:
       base-path: /
       exposure:
         include: health,metrics,prometheus
+      path-mapping.metrics: plain-metrics
       path-mapping.prometheus: metrics
