OpenSuse docker file for db-migrator
Create OpenSuse docker file
Add build profile for OpenSuse docker image

Issue-ID: POLICY-4309
Signed-off-by: danielhanrahan <daniel.hanrahan@est.tech>
Change-Id: I80ec31c62096f9aefa2b729a4e024f63d04e62ad

--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,16 @@
                 <module>policy-db-migrator</module>
             </modules>
         </profile>
+        <profile>
+            <id>dockersuse</id>
+            <modules>
+                <module>policy-jre</module>
+                <module>policy-jdk</module>
+                <module>policy-db-migrator</module>
+            </modules>
+            <properties>
+                <docker.dbm.dockerFile>suse.Dockerfile</docker.dbm.dockerFile>
+            </properties>
+        </profile>
     </profiles>
 </project>
