Fix CSITs for Kohn release
Newer versions of dependencies brought in some small updates to
configuraiton.

Also a script called start-container.sh has been added to bring up a
single Policy Framework container and its dependencies.

Issue-ID: POLICY-4393
Change-Id: I17bac4d75600431fdee74592be4700761a3f8fe7
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/csit/config/clamp/KubernetesParticipantParameters.yaml
+++ b/csit/config/clamp/KubernetesParticipantParameters.yaml
@@ -3,6 +3,11 @@ spring:
     user:
       name: participantUser
       password: zb!XztG34
+  autoconfigure:
+    exclude: >
+      org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,
+      org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,
+      org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 security:
   enable-csrf: false
 
