--- a/csit/config/clamp/PolicyParticipantParameters.yaml
+++ b/csit/config/clamp/PolicyParticipantParameters.yaml
@@ -3,7 +3,11 @@ spring:
     user:
       name: participantUser
       password: zb!XztG34
-
+  autoconfigure:
+    exclude: >
+      org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,
+      org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,
+      org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 participant:
   pdpGroup: defaultGroup
   pdpType: apex
