--- a/csit/config/drools-applications/env/base.conf
+++ b/csit/config/drools-applications/env/base.conf
@@ -96,7 +96,7 @@ GUARD_DISABLED=false
 PDP_HOST=policy-xacml-pdp
 PDP_PORT=6969
 PDP_CONTEXT_URI=policy/pdpx/v1/
-PDP_USERNAME=healthcheck
+PDP_USERNAME=policyadmin
 PDP_PASSWORD=zb!XztG34
 PDP_HTTPS=false
 
@@ -127,7 +127,7 @@ SO_PORT=6669
 SO_CONTEXT_URI=
 SO_URL=http://message-router:6669/
 SO_USERNAME=InfraPortalClient
-SO_PASSWORD=password1$
+SO_PASSWORD='password1$'
 
 # VFC
 
