--- a/csit/config/drools-pdp/env/base.conf
+++ b/csit/config/drools-pdp/env/base.conf
@@ -121,7 +121,7 @@ SO_PORT=8080
 SO_CONTEXT_URI=onap/so/infra/
 SO_URL=http://vm1.mso.simpledemo.onap.org:8080/onap/so/infra
 SO_USERNAME=InfraPortalClient
-SO_PASSWORD=password1$
+SO_PASSWORD='password1$'
 
 # VFC
 
