Fix CSITS in Istanbul
Quote the passowrd for SO

Issue-ID: POLICY-4393
Change-Id: Ie318d5483a92c03d1ebaf73e98c1594efec2220e
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/csit/config/drools-apps/env/base.conf
+++ b/csit/config/drools-apps/env/base.conf
@@ -124,7 +124,7 @@ SO_PORT=6669
 SO_CONTEXT_URI=
 SO_URL=http://message-router:6669/
 SO_USERNAME=InfraPortalClient
-SO_PASSWORD=password1$
+SO_PASSWORD='password1$'
 
 # VFC
 
