--- a/csit/config/drools-apps/env/base.conf
+++ b/csit/config/drools-apps/env/base.conf
@@ -121,7 +121,7 @@ SO_PORT=6669
 SO_CONTEXT_URI=
 SO_URL=http://simulator:6669/
 SO_USERNAME=InfraPortalClient
-SO_PASSWORD=password1$
+SO_PASSWORD='password1$'
 
 # VFC
 
