Add helm charts for policy CSIT
Added script run-k8s-csit.sh to spin and delete kubernetes cluster in Microk8s.
Added helm charts for mariadb, k8s-participant, runtime-acm and dmaap-simulator.

Issue-ID: POLICY-4457
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I456cb7f291d116dbd5b68a067171214a0e08fb37

--- a/helm/policy/components/policy-models-simulator/templates/deployment.yaml
+++ b/helm/policy/components/policy-models-simulator/templates/deployment.yaml
@@ -32,28 +32,22 @@ spec:
           command: ["/opt/app/policy/simulators/bin/simulators.sh"]
           args: ["/opt/app/policy/simulators/etc/mounted/simParameters.json"]
           ports:
-          - containerPort: {{ .Values.service.internalPort }}
           - containerPort: {{ .Values.service.internalPort2 }}
           - containerPort: {{ .Values.service.internalPort3 }}
           - containerPort: {{ .Values.service.internalPort4 }}
           - containerPort: {{ .Values.service.internalPort5 }}
           - containerPort: {{ .Values.service.internalPort6 }}
+          - containerPort: {{ .Values.service.internalPort7 }}
           livenessProbe:
-            exec:
-              command:
-              - /bin/bash
-              - -c
-              - nodetool status | grep $POD_IP | awk '$1!="UN" { exit 1; }'
-            initialDelaySeconds: 120
-            periodSeconds: 20
+            tcpSocket:
+              port: 3904
+            initialDelaySeconds: {{ .Values.liveness.initialDelaySeconds }}
+            periodSeconds: {{ .Values.liveness.periodSeconds }}
           readinessProbe:
-            exec:
-              command:
-              - /bin/bash
-              - -c
-              - nodetool status | grep $POD_IP | awk '$1!="UN" { exit 1; }'
-            initialDelaySeconds: 120
-            periodSeconds: 20
+            tcpSocket:
+              port: 3904
+            initialDelaySeconds: {{ .Values.readiness.initialDelaySeconds }}
+            periodSeconds: {{ .Values.readiness.periodSeconds }}
           volumeMounts:
             - mountPath: /opt/app/policy/simulators/etc/mounted/
               name: simconfig
