--- a/helm/policy/components/policy-models-simulator/templates/service.yaml
+++ b/helm/policy/components/policy-models-simulator/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "policy-models-simulator.fullname" . }}
+  name: message-router
   labels:
 {{ include "policy-models-simulator.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
-      name: {{ .Values.service.portName }}
     - port: {{ .Values.service.externalPort2 }}
       targetPort: {{ .Values.service.internalPort2 }}
       name: {{ .Values.service.portName }}2
@@ -25,6 +22,9 @@ spec:
     - port: {{ .Values.service.externalPort6 }}
       targetPort: {{ .Values.service.internalPort6 }}
       name: {{ .Values.service.portName }}6
+    - port: {{ .Values.service.externalPort7 }}
+      targetPort: {{ .Values.service.internalPort7 }}
+      name: {{ .Values.service.portName }}7
   selector:
     app.kubernetes.io/name: {{ include "policy-models-simulator.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
